chore: fix deploy env

--- a/web/.env.example
+++ b/web/.env.example
@@ -1,2 +1,2 @@
-# URL da API para o proxy do Vite (apenas se a API estiver em porta diferente de 8080)
+# API URL para o proxy do Vite em modo dev (padrão: localhost:3333)
 # VITE_API_URL=http://localhost:3333
