ci: add pages deploy

--- a/web/.env.example
+++ b/web/.env.example
@@ -1,2 +1,8 @@
-# API URL para o proxy do Vite em modo dev (padrão: localhost:3333)
+# API URL: em dev o Vite faz proxy de /api para esta URL (padrão: localhost:3333).
+# No build para GitHub Pages, use a URL da API em produção (ex: Railway, Render).
 # VITE_API_URL=http://localhost:3333
+# VITE_API_URL=https://bolao-api.railway.app
+
+# Base path do app (só necessário para deploy em subpath, ex: GitHub Pages).
+# No CI é definido como /nome-do-repo/
+# VITE_BASE_PATH=/bolao-app/
